# qmtclient

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: README.md  cli.md  compatibility.md  connection.md  data-tools.md  offline-testing.md  realtime-subscriptions-adaptation.md  release.md  roadmap.md  strategy.md  trader-readonly-adaptation.md
examples/: client_events.py  client_rpc.py  offline_strategy.py  remote_connection.py  strategy_facade.py
examples/fixtures/: events.jsonl  market_daily.json  market_empty.json  market_error.json  market_intraday.json  offline_strategy.json
src/qmtclient/: __init__.py  batch.py  cache.py  cli.py  client.py  conversions.py  errors.py  events.py  fake.py  fixtures.py  market.py  models.py  proxy.py  snapshots.py  strategy.py  trader.py
tests/: test_batch_snapshots.py  test_cache_conversions.py  test_cli.py  test_client.py  test_fake.py  test_strategy.py
