[project]
name = "qmtclient"
version = "0.4.0"
description = "Python client SDK for qmtserver remote MiniQMT gateways."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "gly11" },
]
dependencies = [
    "httpx>=0.28.1",
    "websockets>=15.0.1",
]
keywords = ["miniqmt", "qmt", "xtquant", "trading", "client"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/gly11/qmtclient"
Repository = "https://github.com/gly11/qmtclient"
Issues = "https://github.com/gly11/qmtclient/issues"

[project.scripts]
qmtclient = "qmtclient.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qmtclient"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests", "examples"]
extend-exclude = [
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[dependency-groups]
dev = [
    "ruff>=0.15.14",
    "ty>=0.0.39",
]
